@startuml view

package "model" {
    class CardFactory {
        +create_card(window, color, value) : Card
    }
    class Card {
    }
}

package "view" {
    class ViewDiscard {
        -window : pygame.display
        -card : Card
        +update(data : string) : void
    }
    class ViewHand {
        -window : pygame.display
        -cards : List[Card]
        +update(hand_data : dict) : void
        +draw() : void
    }
    class ViewOpponent {
        -window : pygame.display
        -opponents : Dictionary[String, List[Card]]
        +update(data : string) : void
        +draw() : void
    }
}

CardFactory ..> Card : <<creates>>
ViewDiscard ..> CardFactory : <<use>>
ViewHand ..> CardFactory : <<use>>
ViewOpponent ..> CardFactory : <<use>>

ViewDiscard *-- Card : <<contains>>
ViewHand *-- Card : <<contains>>
ViewOpponent *-- Card : <<contains>>

@enduml
